# tfparser

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md  deny.toml
.codex/skills/impl/: SKILL.md
.codex/skills/research/: SKILL.md
.codex/skills/spec/: SKILL.md
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
apps/cli/tests/: cli_parse.rs
apps/server/: Cargo.toml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/tests/: cli_parse.rs
crates/core/: Cargo.toml
crates/core/benches/: pipeline.rs
crates/core/examples/: parse_and_export.rs  parse_one_liner.rs  spike_eval_context.rs  spike_hcl_lowering.rs  spike_parquet_round_trip.rs
crates/core/fuzz/: Cargo.toml
crates/core/fuzz/fuzz_targets/: evaluator.rs  hcl_loader.rs  terragrunt.rs
crates/core/src/: diagnostic.rs  error.rs  lib.rs  parser.rs  pipeline.rs  prelude.rs
crates/core/src/discovery/: classifier.rs  fs_walker.rs  mod.rs  options.rs  types.rs
crates/core/src/eval/: adapter.rs  component.rs  context.rs  error.rs  files.rs  locals.rs  mod.rs  reduce.rs  registry.rs  stdlib.rs  tf_funcs.rs
crates/core/src/exporter/: json.rs  manifest.rs  mod.rs  schema.rs  secondary.rs  writer.rs
crates/core/src/graph/: builder.rs  edges.rs  error.rs  expand.rs  mod.rs  registry.rs
crates/core/src/ir/: component.rs  edge.rs  environment.rs  expression.rs  files.rs  ids.rs  mod.rs  module.rs  newtypes.rs  path_serde.rs  provider.rs  resource.rs  span.rs  terragrunt.rs  value.rs  workspace.rs
crates/core/src/loader/: limits.rs  lowering.rs  mod.rs  raw.rs  source_map.rs  traits.rs
crates/core/src/projection/: mod.rs
crates/core/src/provider/: error.rs  mod.rs  profile_map.rs  resolver.rs
crates/core/src/terragrunt/: context.rs  error.rs  funcs.rs  merge.rs  mod.rs  parsed.rs  resolver.rs
crates/core/src/util/: mod.rs  paths.rs
crates/core/tests/: dependency_graph_pipeline.rs  discovery_loader_pipeline.rs  evaluator_pipeline.rs  graph_expansion_pipeline.rs  parquet_export_pipeline.rs  parquet_schema_golden.rs  provider_pipeline.rs  terragrunt_cascade.rs  workspace_round_trip.rs
crates/core/tests/golden/: resources-schema.json
docs/: dev-guide.en.md  dev-guide.zh.md  index.md  user-guide.en.md  user-guide.zh.md
docs/research/: hcl-parsing-in-rust.md  index.md  multi-account-resolution.md  parquet-arrow-in-rust.md  terraform-repo-shapes.md  terragrunt-handling.md
fixtures/large-monorepo/: README.md
fixtures/large-monorepo/terraform/: root.hcl
fixtures/large-monorepo/terraform/environments/: default.tfvars  production.terragrunt.hcl  staging.terragrunt.hcl
fixtures/large-monorepo/terraform/modules/ecr-repo/: main.tf  variables.tf  versions.tf
fixtures/large-monorepo/terraform/modules/iam-role/: main.tf  outputs.tf  variables.tf
fixtures/large-monorepo/terraform/modules/lambda/: main.tf  outputs.tf  variables.tf
fixtures/large-monorepo/terraform/modules/rds/: main.tf  outputs.tf  variables.tf  versions.tf
fixtures/large-monorepo/terraform/modules/s3-bucket/: main.tf  outputs.tf  variables.tf
fixtures/large-monorepo/terraform/modules/vpc/: main.tf  outputs.tf  variables.tf
fixtures/large-monorepo/terraform/platform/: common.terragrunt.hcl
fixtures/large-monorepo/terraform/platform/ecr-shared/: main.tf  outputs.tf  providers.tf  terragrunt.hcl  variables.tf
fixtures/large-monorepo/terraform/platform/main-network/: main.tf  outputs.tf  providers.tf  terragrunt.hcl  variables.tf
fixtures/large-monorepo/terraform/platform/shared-buckets/: main.tf  outputs.tf  providers.tf  versions.tf
fixtures/large-monorepo/terraform/security/: common.terragrunt.hcl
fixtures/large-monorepo/terraform/security/audit-bucket/: main.tf  outputs.tf  providers.tf
fixtures/large-monorepo/terraform/security/iam-baseline/: main.tf  outputs.tf  providers.tf  terragrunt.hcl  variables.tf
fixtures/large-monorepo/terraform/services/: common.terragrunt.hcl
fixtures/large-monorepo/terraform/services/analytics-worker/: locals.tf  main.tf  outputs.tf  providers.tf  terragrunt.hcl  variables.tf
fixtures/large-monorepo/terraform/services/analytics-worker/environments/: production.tfvars  staging.tfvars
fixtures/large-monorepo/terraform/services/api-gateway/: locals.tf  main.tf  outputs.tf  providers.tf  terragrunt.hcl  variables.tf
fixtures/large-monorepo/terraform/services/api-gateway/environments/: production.tfvars  staging.tfvars
fixtures/large-monorepo/terraform/services/order-service/: database.tf  locals.tf  main.tf  outputs.tf  providers.tf  variables.tf
fixtures/large-monorepo/terraform/services/order-service/environments/: production.tfvars  staging.tfvars
fixtures/multi-provider/: main.tf  variables.tf
fixtures/single-component/: main.tf
fixtures/starter/: README.md  backend.tf  compute.tf  iam.tf  locals.tf  main.tf  network.tf  outputs.tf  providers.tf  security.tf  storage.tf  variables.tf  versions.tf
fixtures/starter/environments/: dev.tfvars  prod.tfvars
specs/: 00-prd.md  10-data-model.md  11-discovery.md  12-hcl-loader.md  13-evaluator.md  14-terragrunt.md  15-resource-graph.md  16-provider-resolver.md  20-parquet-exporter.md  50-cli.md  61-crates-and-features.md  70-security.md  71-performance-budgets.md  72-testing-strategy.md  80-glossary.md  90-roadmap.md  91-impl-plan.md  93-improvements-review.md  99-key-decisions.md  index.md
