[workspace]
members = ["crates/*"]
exclude = ["crates/core/fuzz"]
resolver = "3"

[workspace.package]
version = "0.1.0"
authors = ["tfparser contributors"]
edition = "2024"
license = "MIT"
documentation = "https://docs.rs/tfparser-core"
repository = "https://github.com/tchen/tfparser"
homepage = "https://github.com/tchen/tfparser"
readme = "README.md"
rust-version = "1.95"

[workspace.dependencies]
# Errors / utilities
anyhow = "1"
thiserror = "2"

# Serialization
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Async runtime (kept for downstream crates; tfparser-core itself is sync)
tokio = { version = "1.52", features = [
  "rt",
  "rt-multi-thread",
  "macros",
  "fs",
] }

# HCL parsing (Phase 0 spikes + Phase 2+)
hcl-edit = "0.9"
hcl-rs = "0.19"

# Filesystem walking + classification (Phase 2)
ignore = "0.4"
globset = "0.4"
regex = "1.12"

# Property-based testing
proptest = "1.11"
rstest = "0.26"
insta = "1.47"

# Columnar I/O (Phase 0 spikes + Phase 3+) — latest as of 2026-05.
arrow = { version = "58", default-features = false, features = ["prettyprint"] }
parquet = { version = "58", default-features = false, features = [
  "arrow",
  "zstd",
  "snap",
] }

# Phase 3 hashing + numeric rendering + time.
sha2 = "0.11"
ryu = "1"
jiff = "0.2"

# Phase 4 evaluator: base64encode/decode shipped here because Terraform
# resource attributes commonly carry literal base64 blobs (cloud-init
# user_data via `base64encode(templatefile(...))`). md5/sha1/bcrypt/uuid are
# **not** added — they are unsafe per CLAUDE.md § Cryptography and rarely
# appear in resource attributes; the evaluator leaves their calls as
# Expression::FuncCall (Unresolved) per spec 13 § 5 closing rule.
base64 = "0.22"

# Phase 6 Terragrunt resolver: concurrent memo for read_terragrunt_config
# (CLAUDE.md § Async & Concurrency — DashMap over Mutex<HashMap>).
dashmap = "6"

# Phase 7 provider resolver:
# - `arc-swap` is the CLAUDE.md-anchored choice for an infrequently-updated
#   `Arc<ProfileMap>` (lock-free reads on the hot resolver path).
# - `rust-ini` parses `~/.aws/config` (INI-shaped; reliable maintained crate
#   per [16-provider-resolver.md § 3.1]).
# - `validator` derive-validates the YAML profile-map loader's input
#   (account-id `^\d{12}$`, region length cap, char allowlists; per
#   [16-provider-resolver.md § 3.2] and CLAUDE.md § Input Validation).
# - `serde_yaml` deserialises the YAML profile-map file.
arc-swap   = "1.7"
rust-ini   = "0.21"
validator  = { version = "0.20", features = ["derive"] }
serde_yaml = "0.9"

# Phase 3 CLI surface.
clap = { version = "4", features = ["derive", "env"] }

# Small-value containers
smallvec = { version = "1.15", features = ["serde", "const_generics"] }

# Builder derive — CLAUDE.md § Type Design requires it for structs with >5 fields.
typed-builder = "0.23"

# Test helpers
tempfile   = "3"
assert_cmd = "2"
predicates = "3"

# Bench harness — pinned to the latest 0.7 family, drop-in successor to 0.5.
criterion = { version = "0.7", default-features = false, features = [
  "html_reports",
  "rayon",
] }

# Workspace member alias.
# Version is pinned alongside `path` so `cargo publish` for the CLI crate
# can record a crates.io version requirement without losing local
# resolution during development.
tfparser-core = { path = "crates/core", version = "0.1.0" }

# Workspace-wide lint policy (CLAUDE.md § Safety & Security + § Code Style).
# Crate Cargo.toml inherits via [lints] workspace = true.
[workspace.lints.rust]
unsafe_code = "forbid"
rust_2024_compatibility = { level = "warn", priority = -1 }
missing_docs = "warn"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
indexing_slicing = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"
# Allow with justification — see CLAUDE.md commentary in 61-crates-and-features.md § 4.2.
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
