[package]
name        = "tfparser-cli"
description = "Command-line interface for tfparser-core: parse Terraform/Terragrunt repos into Parquet."
categories  = ["command-line-utilities", "development-tools"]
keywords    = ["terraform", "terragrunt", "hcl", "parquet"]

version.workspace       = true
authors.workspace       = true
edition.workspace       = true
license.workspace       = true
documentation.workspace = true
repository.workspace    = true
homepage.workspace      = true
rust-version.workspace  = true

[[bin]]
name = "tfparser"
path = "src/main.rs"

[dependencies]
tfparser-core      = { workspace = true }
anyhow             = { workspace = true }
clap               = { workspace = true }
serde_json         = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
jiff               = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile   = { workspace = true }
parquet    = { workspace = true }
arrow      = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
