[package]
name        = "tfparser-core"
description = "Library for parsing Terraform / Terragrunt source repositories into a queryable IR (Parquet-backed)."
categories  = ["development-tools", "parser-implementations"]
keywords    = ["terraform", "terragrunt", "hcl", "parquet", "infrastructure"]

version.workspace       = true
authors.workspace       = true
edition.workspace       = true
license.workspace       = true
documentation.workspace = true
repository.workspace    = true
homepage.workspace      = true
rust-version.workspace  = true

[dependencies]
serde         = { workspace = true }
serde_json    = { workspace = true }
thiserror     = { workspace = true }
tracing       = { workspace = true }
smallvec      = { workspace = true }
typed-builder = { workspace = true }
hcl-edit      = { workspace = true }
ignore        = { workspace = true }
globset       = { workspace = true }
regex         = { workspace = true }

[dev-dependencies]
anyhow             = { workspace = true }
arrow              = { workspace = true }
parquet            = { workspace = true }
hcl-rs             = { workspace = true }
tempfile           = { workspace = true }
tracing-subscriber = { workspace = true }
rstest             = { workspace = true }
insta              = { workspace = true }
proptest           = { workspace = true }

[lints]
workspace = true
